--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,18 +1,35 @@
 <%= render 'shared/side-nav' %>
-<div class="container ml200">
 
-  <div class="dash-nav">
-    <p><%= link_to "Sales", report_sales_path %></p>
-    <p><%= link_to "Advice", report_sales_advise_path %></p>
-    <p><%= link_to "Notes", report_sales_comments_path %></p>
-    <p><%= link_to "All Sales", report_sales_transactions_path %></p>
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Choose Your View</option>
-      <option value="1">Monthly</option>
-      <option value="2">Weekly</option>
-    </select>
+<div class="main-tabs ml200">
+  <div class="row"> 
+
+    <div class="col-lg">
+      <div class="tab-title">
+        <h4> <strong class="highlight">Sales</strong></h1>
+      </div>
+    </div>
+
+    <div class="col-lg">
+       <div class="tabs">
+         <div class="tab active">
+           <a href="<%= report_sales_path %>">Highlights</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_sales_advice_path %>">Advice</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_sales_comments_path %>">Notes</a>
+         </div>
+         <div class="tab ">
+           <a href="<%= report_sales_transactions_path %>">All transactions</a>
+         </div>
+       </div>
+    </div>
   </div>
+</div>
 
+
+<div class="container ml200">
   <div class="row d-flex justify-content-center mb-5 mt-5">
     <h4>🚀 Your total sales for the period are <strong class="highlight">€ <%= number_with_delimiter(@total_sales, :delimiter => ',') %> 🚀</strong></h4>
   </div>
