--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -1,25 +1,34 @@
 <%= render 'shared/side-nav' %>
 
-  <div class="dash-nav">
-    <p><%= link_to "Treasury", report_treasury_path %></p>
-    <p><%= link_to "Advice", report_treasury_advise_path %></p>
-    <p><%= link_to "Notes", "./notes" %></p>
-    <p><%= link_to "All Transactions", report_treasury_transactions_path %></p>
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Choose View</option>
-      <option value="1">Monthly</option>
-      <option value="2">Weeekly</option>
-    </select>
+<div class="main-tabs ml200">
+  <div class="row"> 
+
+    <div class="col-lg">
+      <div class="tab-title">
+        <h4> <strong class="highlight">Treasury</strong></h1>
+      </div>
+    </div>
+
+    <div class="col-lg">
+       <div class="tabs">
+         <div class="tab active">
+           <a href="<%= report_treasury_path %>">Highlights</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_treasury_advice_path %>">Advice</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_treasury_comments_path %>">Notes</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_treasury_transactions_path %>">All transactions</a>
+         </div>
+       </div>
+    </div>
   </div>
-  
+</div>
+
 <div class="container ml200">
-
-  <%# <div>
-    <h4>Report name</h4>
-    <p>Start</p>
-    <p>Start</p>
-  </div> %>
-
 
   <div class="row d-flex justify-content-center mb-5 mt-5">
     <h4>Your cash is at <strong class="highlight">€ <%= number_with_delimiter(@balance_last_day.to_i, :delimiter => ',') %> € </strong>on <%= @treasury_last_day.ecriture_date.strftime("%d %B %Y") %> </h4>
