--- a/app/views/sales/advice.html.erb
+++ b/app/views/sales/advice.html.erb
@@ -5,23 +5,23 @@
 
     <div class="col-lg">
       <div class="tab-title">
-        <h4> <strong class="highlight">Expenditures</strong></h1>
+        <h4> <strong class="highlight">Sales</strong></h1>
       </div>
     </div>
 
     <div class="col-lg">
        <div class="tabs">
          <div class="tab">
-           <a href="<%= report_expenditures_path %>">Highlights</a>
+           <a href="<%= report_sales_path %>">Highlights</a>
          </div>
          <div class="tab active">
-           <a href="<%= report_expenditures_advice_path %>">Advice</a>
+           <a href="<%= report_sales_advice_path %>">Advice</a>
          </div>
          <div class="tab">
-           <a href="<%= report_expenditures_comments_path %>">Notes</a>
+           <a href="<%= report_sales_comments_path %>">Notes</a>
          </div>
          <div class="tab ">
-           <a href="<%= report_expenditures_transactions_path %>">All transactions</a>
+           <a href="<%= report_sales_transactions_path %>">All transactions</a>
          </div>
        </div>
     </div>
