--- a/app/views/sales/transactions.html.erb
+++ b/app/views/sales/transactions.html.erb
@@ -1,17 +1,36 @@
 <%= render 'shared/side-nav' %>
-<div class="container ml200">
-  <div class="dash-nav">
-    <p><%= link_to "Sales", report_sales_path %></p>
-    <p><%= link_to "Advice", report_sales_advise_path %></p>
-    <p><%= link_to "Notes", report_sales_comments_path %></p>
-    <p><%= link_to "All Sales", report_sales_transactions_path %></p>
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Choose View</option>
-      <option value="1">Monthly</option>
-      <option value="2">Weeekly</option>
-    </select>
+
+<div class="main-tabs ml200">
+  <div class="row"> 
+
+    <div class="col-lg">
+      <div class="tab-title">
+        <h4> <strong class="highlight">Sales</strong></h1>
+      </div>
+    </div>
+
+    <div class="col-lg">
+       <div class="tabs">
+         <div class="tab">
+           <a href="<%= report_sales_path %>">Highlights</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_sales_advice_path %>">Advice</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_sales_comments_path %>">Notes</a>
+         </div>
+         <div class="tab active">
+           <a href="<%= report_sales_transactions_path %>">All transactions</a>
+         </div>
+       </div>
+    </div>
   </div>
 </div>
+
+<div class="container ml200">
+
+
   <div class="row justify-content-center">
       <h3 class ="mt-4" style= color:#1E0087>See all of your sales at a glance</h3>
   </div>
@@ -49,3 +68,4 @@
   </div>
 
   </div>
+</div>
