--- a/app/views/treasuries/advice.html.erb
+++ b/app/views/treasuries/advice.html.erb
@@ -14,10 +14,10 @@
          <div class="tab">
            <a href="<%= report_treasury_path %>">Highlights</a>
          </div>
-         <div class="tab ">
+         <div class="tab active">
            <a href="<%= report_treasury_advice_path %>">Advice</a>
          </div>
-         <div class="tab active">
+         <div class="tab">
            <a href="<%= report_treasury_comments_path %>">Notes</a>
          </div>
          <div class="tab" >
@@ -28,6 +28,14 @@
   </div>
 </div>
 
+
 <div class="container ml200">
 </div>
+  <%# <div>
+    <h4>Report name</h4>
+    <p>Start</p>
+    <p>Start</p>
+  </div> %>
+
+
 
