--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -1,15 +1,31 @@
 <%= render 'shared/side-nav' %>
 
-<div class="dash-nav">
-  <p><%= link_to "Treasury", report_treasury_path %></p>
-  <p><%= link_to "Advice", report_treasury_advise_path %></p>
-  <p><%= link_to "Notes", report_treasury_comments_path %></p>
-  <p><%= link_to "All Transactions", report_treasury_transactions_path %></p>
-  <select class="form-select" aria-label="Default select example">
-    <option selected>Choose View</option>
-    <option value="1">Monthly</option>
-    <option value="2">Weeekly</option>
-  </select>
+<div class="main-tabs ml200">
+  <div class="row"> 
+
+    <div class="col-lg">
+      <div class="tab-title">
+        <h4> <strong class="highlight">Treasury</strong></h1>
+      </div>
+    </div>
+
+    <div class="col-lg">
+       <div class="tabs">
+         <div class="tab">
+           <a href="<%= report_treasury_path %>">Highlights</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_treasury_advice_path %>">Advice</a>
+         </div>
+         <div class="tab">
+           <a href="<%= report_treasury_comments_path %>">Notes</a>
+         </div>
+         <div class="tab active">
+           <a href="<%= report_treasury_transactions_path %>">All transactions</a>
+         </div>
+       </div>
+    </div>
+  </div>
 </div>
 
 <div class="container ml200">
