--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -2,11 +2,12 @@
 .main-tabs {
   margin-top: 25px; 
   border-bottom: solid 1px $blue;
+  width: 100%;
 }
 
 .tab-title {
   text-align: left;
-  margin-left: 50px
+  margin-left: 60px
 }
 
 
