top navbar changes

--- a/app/assets/stylesheets/components/_analyses-nav.scss
+++ b/app/assets/stylesheets/components/_analyses-nav.scss
@@ -1,47 +1,62 @@
-.an-color {
+.an-navbar {
   justify-content: space-between;
-  background-color: white;
+  background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.an-navbar .navbar-collapse {
   flex-grow: 0;
 }
 
-.an-navbar {
-  position: fixed;
-  width: 85%;
-  height: 60px;
+.an-navbar .navbar-brand img {
+  width: 40px;
 }
 
-.margin-nav {
-  margin-top: 74px
-}
 
-.navbar-title {
-  color: $light-gray;
-}
 
-.an-nav-item {
-  color: #535456;
-  margin-left: 20px;
-  text-decoration: none;
-}
+// .an-color {
+//   justify-content: space-between;
+//   background-color: white;
+// }
 
-.nav-item:hover {
-  color: $green;
-}
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
 
-.an-top-bar{
-  top: 0;
-  right: 0;
-  box-shadow: 0px 2px 4px 0px rgba(200, 198, 198, 0.92);
-}
+// .an-navbar {
+//   position: fixed;
+//   width: 85%;
+//   height: 60px;
+// }
 
-.an-navbar-pos{
-  display: flex;
-  padding-left: 80%;
-  list-style: none;
-  vertical-align: middle;
-  text-align: center;
-  margin-bottom: 0 !important
-}
+// .margin-nav {
+//   margin-top: 74px
+// }
+
+// .navbar-title {
+//   color: $light-gray;
+// }
+
+// .an-nav-item {
+//   color: #535456;
+//   margin-left: 20px;
+//   text-decoration: none;
+// }
+
+// .nav-item:hover {
+//   color: $green;
+// }
+
+// .an-top-bar{
+//   top: 0;
+//   right: 0;
+//   box-shadow: 0px 2px 4px 0px rgba(200, 198, 198, 0.92);
+// }
+
+// .an-navbar-pos{
+//   display: flex;
+//   padding-left: 80%;
+//   list-style: none;
+//   vertical-align: middle;
+//   text-align: center;
+//   margin-bottom: 0 !important
+// }
