--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #0C2556;
+  background-color: white;
+  box-shadow: 0px 2px 4px 0px rgba(200, 198, 198, 0.92);
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -13,6 +14,7 @@
 
 .navbar {
   position: fixed;
+  top: 0;
   width: 100%;
 }
 
