--- a/app/views/shared/_analyses-navbar.html.erb
+++ b/app/views/shared/_analyses-navbar.html.erb
@@ -1,4 +1,7 @@
-<div class="an-navbar an-top-bar navbar-expand-sm an-color">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <a class="navbar-brand" href="#">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+  </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -6,27 +9,18 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="an-navbar-pos mr-auto">
-      <% if user_signed_in? %>
-        <li class="an-nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <%= current_user.email %> <i class="fas fa-chevron-down"></i>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="an-nav-item active">
-          <%= link_to "Home", "#", class: "nav-title" %>
-        </li>
-
-        <li class="an-nav-item m-2">
-          <%= link_to "Login", new_user_session_path, class: "btn-nav" %>
-        </li>
-        <li class="an-nav-item m-2">
-          <%= link_to "Signup",  new_user_registration_path, class: "btn-nav" %>
-        </li>
-      <% end %>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link"><%= current_user.email %></a>
+      </li>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "My profile", edit_user_registration_path, class: "dropdown-item" %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
+
