--- a/app/views/treasuries/advice.html.erb
+++ b/app/views/treasuries/advice.html.erb
@@ -1,41 +1,2 @@
 <%= render 'shared/side-nav' %>
-
-<div class="main-tabs ml200">
-  <div class="row"> 
-
-    <div class="col-lg">
-      <div class="tab-title">
-        <h4> <strong class="highlight">Treasury</strong></h1>
-      </div>
-    </div>
-
-    <div class="col-lg">
-       <div class="tabs">
-         <div class="tab">
-           <a href="<%= report_treasury_path %>">Highlights</a>
-         </div>
-         <div class="tab active">
-           <a href="<%= report_treasury_advice_path %>">Advice</a>
-         </div>
-         <div class="tab">
-           <a href="<%= report_treasury_comments_path %>">Notes</a>
-         </div>
-         <div class="tab" >
-           <a href="<%= report_treasury_transactions_path %>">All transactions</a>
-         </div>
-       </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="container ml200">
-</div>
-  <%# <div>
-    <h4>Report name</h4>
-    <p>Start</p>
-    <p>Start</p>
-  </div> %>
-
-
-
+<%= render 'shared/tabs', section: :treasury %>
