--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background-color: white;
-  box-shadow: 0px 2px 4px 0px rgba(200, 198, 198, 0.92);
+  background-color: #0C2556;
 }
 
 .navbar-lewagon .navbar-collapse {
