--- a/app/assets/stylesheets/components/_pages.scss
+++ b/app/assets/stylesheets/components/_pages.scss
@@ -37,8 +37,8 @@
 
 .card-dash {
   background-color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
+  color: $black;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin: 20px 10px;
   padding: 20px;
