--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -1,15 +1,15 @@
 .main {
-    min-height: calc(100vh - 60px); // if your footer height is 60px
-  }
-
-
-body {
-  margin: 0;
-    font-family: "Poppins", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #0E0000;
-    text-align: left;
-    background-color: #EFF4FB;
+  min-height: calc(100vh - 60px); // if your footer height is 60px
 }
+
+
+// body {
+//   margin: 0;
+//     font-family: "Poppins", sans-serif;
+//     font-size: 1rem;
+//     font-weight: 400;
+//     line-height: 1.5;
+//     color: #0E0000;
+//     text-align: left;
+//     background-color: #EFF4FB;
+// }
