--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -1,12 +1,12 @@
-.ml200{
+.ml200 {
   margin-left: 200px;
 }
 
-.ml50{
+.ml50 {
   margin-left: 50px;
 }
 
-.mb40{
+.mb40 {
   margin-bottom: 40px;
 }
 
@@ -19,7 +19,7 @@
   align-items: center;
 }
 
-.dd-title{
+.dd-title {
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 12px;
@@ -27,14 +27,15 @@
   font-family: 'Lato', sans-serif;
 }
 
-.pr-10{
+.pr-10 {
   padding-right: 10px;
 }
 
 .mt60 {
   margin-top: 60px;
+}
 
-.pr-40{
+.pr-40 {
   padding-right: 40px
 }
 
