--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -3,7 +3,10 @@
 
 <div class="container ml200">
   <br>
-  <h2 class="text-center">At a glance: all you need to know abour your expenditures</h2>
+  <br>
+  <br>
+  <br>
+  <h2 class="text-center">At a glance: all you need to know about your expenditures</h2>
 
   <div class="d-flex justify-content-between p-3">
 
