--- a/app/views/expenditures/transactions.html.erb
+++ b/app/views/expenditures/transactions.html.erb
@@ -2,7 +2,8 @@
 <%= render 'shared/tabs', section: :expenditures %>
 
 <div class="container ml200">
-
+  <br>
+  <br>
   <h3 class="text-center mb-5 mt-5">All expenditures transactions 👎</h3>
 
   <div class="container">
@@ -18,7 +19,7 @@
       <% end %>
     </div>
 
-    <div class="divTableAll mt-3">
+ <!--    <div class="divTableAll mt-3">
       <div class="divRow d-flex justify-content-around">
         <div class="divCell mb-3"><h5><strong class="highlight">Item</strong></h5></div>
         <div class="divCell mb-3"><h5><strong class="highlight">Date</strong></h5></div>
@@ -36,7 +37,40 @@
             <div class="divCell"><%= line.debit %> </div>
           <% end %>
           </div>
-        <% end %>
+        <% end %> -->
+
+
+ <table class="table table-hover">
+          <br>
+           <thead style= "color: grey">
+             <tr>
+              <th scope="col">#</th>
+              <th scope="col">Expenditure</th>
+              <th scope="col">Date</th>
+              <th scope="col">Amount</th>
+             </tr>
+           </thead>
+           <tbody>
+            <% @lines.each_with_index do |line, index| %>
+              <tr>
+                <th scope="row" span class="badge bg-secondary" style= "color: white"><%= index + 1 %></th>
+                <td><%= line.ecriture_lib.capitalize %></th>
+                <td><%= line.ecriture_date.strftime("%d %B %Y")%></td>
+                <% if line.debit == 0 %>
+                  <td> € <%= number_with_delimiter(line.credit.round(0), :delimiter => ',') %> </td>
+                <% else %>
+                  <td> € <%= number_with_delimiter(line.debit.round(0), :delimiter => ',') %></td>
+              </tr>
+            <% end %>
+            <% end %>
+           </tbody>
+        </table>
+
+
+
+
+
+
 
     </div>
 
