--- a/app/views/sales/transactions.html.erb
+++ b/app/views/sales/transactions.html.erb
@@ -1,14 +1,10 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :sales %>
 
-<div class="container ml200">
+<div class="container ml200 mt60">
+  <h3 class="text-center mb-5 mt-5">See all of your sales at a glance</h3>
 
-
-  <div class="row justify-content-center">
-      <h3 class ="mt-4" style= color:#1E0087>See all of your sales at a glance</h3>
-  </div>
-
-  <div class="container ml200">
+  <div class="container">
     <div class="container-equal-margin mb-4 p-0">
       <%= form_tag report_sales_transactions_path, method: :get do %>
       <div class="d-flex align-items-center m-3">
@@ -21,22 +17,26 @@
       <% end %>
     </div>
 
-    <div class="divTableAll mt-3">
-      <div class="divRow d-flex justify-content-around">
-        <div class="divCell mb-3"><h5><strong class="highlight">Sale</strong></h5></div>
-        <div class="divCell mb-3"><h5><strong class="highlight">Date</strong></h5></div>
-        <div class="divCell mb-3"><h5><strong class="highlight">Amount</strong></h5></div>
-      </div>
-
-        <% @lines.each do |line| %>
-          <div class="divRow d-flex justify-content-around">
-            <div class="divCell"> <%= line.ecriture_lib %></div>
-            <div class="divCell"> <%= line.ecriture_date %></div>
-            <div class="divCell">€ <%= line.credit %> </div>
-          </div>
-        <% end %>
-
-    </div>
+  <table class="table table-hover">
+    <thead "color: grey">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Sale</th>
+        <th scope="col">Date</th>
+        <th scope="col">Amount</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @lines.each_with_index do |line, index| %>
+        <tr>
+          <th scope="row" span class="badge bg-secondary" style= "color: white"><%= index + 1 %></th>
+          <td><%= line.ecriture_lib %></td>
+          <td><%= line.ecriture_date.strftime("%d %B %Y")%></td>
+          <td>€ <%= number_with_delimiter(line.credit.round(0), :delimiter => ',') %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
   </div>
 
