--- a/app/assets/stylesheets/components/_dashboards.scss
+++ b/app/assets/stylesheets/components/_dashboards.scss
@@ -71,3 +71,15 @@
   margin-top: 30px;
   text-align: center;
 }
+
+#table-right {
+  margin-top: 50px; 
+}
+
+#cash-stats {
+  margin-top: 140px; 
+}
+
+.four-cards {
+  margin-top: 45px;
+}
