--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :treasury %>
 
-<div class="container ml200">
+<div class="container ml200 mt100">
   <h3 class="text-center mb-5 mt-5">All treasury transactions 👎</h3>
 
   <div class="container">
