--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,46 +5,52 @@
 
     <h1 class="main-title"><strong class="highlight">Hello you !</strong></h1>
     <h3 class="sub-title">Welcome to Decidesk, let’s get this accounting party started !</h3>
+    <br>
 
- </div>
-
- <div class="container">
-  <div class="card-dash col-lg-12">
-      <h4 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h4>
-      <div class="row mt-3">
-        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h5></div>
-        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h5></div>
-      </div>
-      <div class="row mt-3">
-        <div class="col text-center"><h5>Reports uploaded</h5></div>
-        <div class="col text-center"><h5>Lines Analysed</h5></div>
-      </div>
   </div>
 
-  <div class="d-flex justify-content-between">
-    <div class="d-flex flex-column" style="min-width: 50%">
-      <div class="card-dash">
-          <h4 class="text-center"><strong class="highlight">Upload a new FEC for analysis</strong></h4>
-          <div>
-            <%= render 'reports/form' %>
+  <div class="container">
+    <div class= "row">
+      <div class="col-lg-12">
+        <div class="card-dash">
+          <h3 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h3>
+          <div class="row mt-3">
+            <div class="col text-center"><h3><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h3></div>
+            <div class="col text-center"><h3><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h3></div>
+          </div>
+          <div class="row mt-3">
+            <div class="col text-center"><h5>Reports uploaded</h5></div>
+            <div class="col text-center"><h5>Lines Analysed</h5></div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="d-flex flex-column" style="min-width: 50%">
-      <div class="card-dash">
-        <h4 class="text-center"><strong class="highlight">Your previous analysis</strong></h4>
-        <% if @current_user.reports %>
-          <% @current_user.reports.all.each do |report| %>
-            <div class="divRow d-flex justify-content-around">
-              <p class="divCell"><%= report.name %></p>
-              <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
-              <p class="divCell"><%= link_to "See details", report_path(report.id), class: "btn btn-small" %></p>
-            </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="card-dash">
+          <h4 class="text-center"><strong class="highlight">Upload a new FEC for analysis</strong></h4>
+          <div>
+            <%= render 'reports/form' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card-dash">
+          <h4 class="text-center"><strong class="highlight">Your previous analysis</strong></h4>
+          <% if @current_user.reports %>
+            <% @current_user.reports.all.each do |report| %>
+              <div class="divRow d-flex justify-content-around">
+                <p class="divCell"><%= report.name %></p>
+                <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
+                <p class="divCell"><%= link_to "See details", report_path(report.id), class: "btn btn-small" %></p>
+              </div>
+            <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
+ </div>
 </div>
 
