changes to FEC home

--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -36,11 +36,12 @@
 }
 
 .pr-40 {
-  padding-right: 40px
+  padding-right: 40px;
 }
 
 .mt100{
   margin-top: 100px;
+}
 
 .mw{
   width: 250px;
@@ -48,4 +49,8 @@
 
 .mt-60{
   margin-top: 60px;
+}
+
+.mw1110{
+  max-width: 1110px;
 }
