--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -2,23 +2,32 @@
 
 <div class="container">
   <div class="container-index">
-
-    <h1 class="main-title"><strong class="highlight">Hello you !</strong></h1>
-    <h3 class="sub-title">Welcome to Decidesk, let’s get this accounting party started !</h3>
-
+    <div class="card-dash col-lg-12">
+      <h1 class="main-title"><strong class="highlight">👋 Welcome to Decidesk !</strong></h1>
+      <h4 class="sub-title">Tired of Excel? Need to quickly understand your business? Well you've come to the right place. Load your FEC file below and let's get this party started!</h4>
+    </div>
  </div>
 
- <div class="container">
-  <div class="card-dash col-lg-12">
-      <h4 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h4>
-      <div class="row mt-3">
-        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h5></div>
-        <div class="col text-center"><h5><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h5></div>
+  <div class="d-flex justify-content-between">
+    <div class="card-dash col-lg-6">
+        <h3 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h3>
+        <div class="row mt-3">
+          <div class="col text-center"><h2><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h2></div>
+          <div class="col text-center"><h2><strong class="highlight-blue"><%= number_with_delimiter(@current_user.lines.all.count, :delimiter => ',') %></strong> </h2></div>
+        </div>
+        <div class="row mt-3">
+          <div class="col text-center"><h4>Reports uploaded</h4></div>
+          <div class="col text-center"><h4>Lines Analysed</h4></div>
+        </div>
+    </div>
+
+    <div class="card-home col-lg-6">
+        <%= image_tag ("idea.png") %>
+      <div class="card-home-infos">
+        <h3 class="text-center mb-5"><strong class="highlight">New to Decidesk?</strong></h3>
+        <p>Decidesk is designed to be as simple as possible to use. Simply upload a new report in CSV format using the simple form below 👇, or view a report that you've previously uploaded, click on "see details" to visualize your data.</p>
       </div>
-      <div class="row mt-3">
-        <div class="col text-center"><h5>Reports uploaded</h5></div>
-        <div class="col text-center"><h5>Lines Analysed</h5></div>
-      </div>
+    </div>
   </div>
 
   <div class="d-flex justify-content-between">
@@ -44,7 +53,6 @@
         <% end %>
       </div>
     </div>
-  </div>
   </div>
 </div>
 
